...
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="rkj-oN-Yb2" userLabel="Coins">
                                <rect key="frame" x="40" y="300" width="295" height="60"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ovI-hx-c2b" userLabel="quarter">
                                        <rect key="frame" x="0.0" y="0.0" width="68" height="60"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                        <state key="normal" title="Quarter">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
                                        <connections>
                                            <action selector="quarterTouchUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XQz-K1-uTE"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4zW-z0-DDa" userLabel="dime">
                                        <rect key="frame" x="76" y="0.0" width="67.5" height="60"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                        <state key="normal" title="Dime">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="dimeTouchUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RYy-O6-Mnf"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PCS-PA-62g" userLabel="nickel">
                                        <rect key="frame" x="151.5" y="0.0" width="68" height="60"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                        <state key="normal" title="Nickel">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="nickelTouchUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="R5r-qK-quS"/>
                                        </connections>
                                    </button>
...
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AMd-ie-NmB">
                                        <rect key="frame" x="145.5" y="0.0" width="137.5" height="60"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Return Coins">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="returnCoinsTouchUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="f0y-6d-G8g"/>
                                        </connections>
                                    </button>
...
